--- a/blog/css/style.css
+++ b/blog/css/style.css
@@ -78,6 +78,7 @@ html{
 }
 
 .article-image {
+    size: 25%;
     float: left;
 }
 
@@ -87,5 +88,14 @@ nav ol {
 }
 
 h1 {
+
     text-align: center;
+}
+
+h2 {
+    font-size: 1.75rem;
+}
+
+h3 {
+    font-size: 1.25rem;
 }
