What if I float it all

--- a/blog/css/style.css
+++ b/blog/css/style.css
@@ -100,6 +100,10 @@ h3 {
     font-size: 1.25rem;
 }
 
+.main-section {
+    float: left;
+}
+
 .subsection figure{
     display: grid;
     grid-gap: 0.5%;
